; ModuleID = '/home/carl/AnghaBench/linux/drivers/ptp/extr_ptp_qoriq.c_ptp_qoriq_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ptp/extr_ptp_qoriq.c_ptp_qoriq_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.ptp_qoriq = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @ptp_qoriq_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ptp_qoriq_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.ptp_qoriq*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.ptp_qoriq* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.ptp_qoriq* %5, %struct.ptp_qoriq** %3, align 8
  %6 = load %struct.ptp_qoriq*, %struct.ptp_qoriq** %3, align 8
  %7 = call i32 @ptp_qoriq_free(%struct.ptp_qoriq* %6)
  %8 = load %struct.ptp_qoriq*, %struct.ptp_qoriq** %3, align 8
  %9 = getelementptr inbounds %struct.ptp_qoriq, %struct.ptp_qoriq* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @release_resource(i32 %10)
  %12 = load %struct.ptp_qoriq*, %struct.ptp_qoriq** %3, align 8
  %13 = call i32 @kfree(%struct.ptp_qoriq* %12)
  ret i32 0
}

declare dso_local %struct.ptp_qoriq* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @ptp_qoriq_free(%struct.ptp_qoriq*) #1

declare dso_local i32 @release_resource(i32) #1

declare dso_local i32 @kfree(%struct.ptp_qoriq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
